<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="TODO"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/hollywood_logo" />

        <ImageView
            android:id="@+id/ivHollywood"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/hollywood_logo"
            android:src="@drawable/movie_image"
            android:visibility="invisible" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:id="@+id/etSearch"
                    style="@style/EditTextColorBlue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="27dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="27dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:hint="@string/enter_query"
                    android:textColor="#314e8f"
                    android:textSize="16sp" />
            </LinearLayout>
            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="#314e8f"
                android:background="#FFFFFF"
                android:visibility="invisible" />
        </LinearLayout>


        <Button
            android:id="@+id/btnTopRated"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/BlueButton"
            android:fontFamily="sans-serif"
            android:text="@string/get_top_rated_movies"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/get_now_playing"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#314e8f"
            android:background="#FFFFFF"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>