<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/ic_person_details" />

        <RelativeLayout
            android:id="@+id/RL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toRightOf="@+id/tvGreenBar"
                android:fontFamily="sans-serif-medium"
                android:textColor="#7b9c5a"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/tvGreenBar"
                android:fontFamily="sans-serif"
                android:textColor="#555555"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvGreenBar"
                android:layout_width="6dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/tvDesc"
                android:layout_alignTop="@id/tvTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="#008800" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/number_of_votes_bold"
                    android:textColor="#7b9c5a"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvNumVotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/user_rating_bold"
                    android:textColor="#7b9c5a"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvUserRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/release_date_bold"
                    android:textColor="#7b9c5a"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
